Fix collapsed nav visibilty
Add background color to small and xs media queries when navbar is collapsed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,11 +44,6 @@ nav li {
  "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
 } 
 
-.navbar-collapse {
-   padding-left: 25px;
-   padding-top: 0px; 
-}
-
 .navbar-toggler.collapsed .close-icon {
     display: none;
    }
@@ -256,6 +251,14 @@ nav li {
     padding-left: 25px; 
 }
 
+.navbar-collapse {
+   padding-left: 25px;
+   padding-top: 0px; 
+   margin-top: 17px;
+   margin-bottom: 20px;
+   background-color: white;
+}
+
 /** Footer **/
 #subscribe {
     padding:70px; 
@@ -324,6 +327,13 @@ nav li {
     padding-left: 30px; 
 }  
 
+.navbar-collapse {
+   padding-left: 25px;
+   padding-top: 0px; 
+   margin-top: 17px;
+   margin-bottom: 20px;
+   background-color: white;
+}
 /** Footer **/
 #subscribe {
     padding: 20px; 
